[package]
name = "levenshtein-neighbourhood"
version = "0.1.0"
edition = "2021"

[profile.dev]
lto = true
opt-level = 3
#overflow-checks = false

# for flamegraph
[profile.release]
#debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nohash-hasher = "0.2.0"