[package]
name = "levenshtein-neighbourhood"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/anders.rs"
name = "anders"

[profile.dev]
lto = true
opt-level = 3
#overflow-checks = false

# for flamegraph
[profile.release]
#debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nohash-hasher = "0.2.0"
fxhash = "0.2.1"
typed-arena = "2.0.2"